         partition, node and variable.

    o    Removed internal bugs of 'tvcolmm' and 'tvglm' calls The 
         changes have no consequences for the users. 

    o    Removed internal bugs in 'fvcm'.

    o    Improved help file of 'fvcm'.

    o    Changed the defaults for 'maxwidth' and 'maxdepth' in 'tvcm_control'
         from '1e9' to 'Inf'.


Changes in Version 0.3-2
	
    o    Changed a default definition for 'formula' of 'olmm'. Terms
         which are not specified by 'ce' or 'ge' are now always assigned
         to 'ge' terms. The old revision used a model specific assignement.
         It is generally best to use the 'ce' and 'ge' terms to get
         the desired model.

    o    Corrected labels for random effects of 'olmm' objects.

    o    Revision of the 'predict' method for 'olmm'. The new function 
         implements the three prediction option of Skrondal and 
         Rabe-Hesketh (2009).

    o    Revised references.


Changes in Version 0.3-1

    o    Improvements for 'prunepath' method. 

    o    Moved documentation of 'prunepath' to 'tvcm-assessment'.

    o    Added example for 'prune'.

    o    Internal changes in 'estfun.olmm' and new argument 'center' for 
         the function 'predecor_control'.

    o    New argument 'fast' for 'tvcm_control' to control whether an
         approximative or the accurate model is used at exhaustive search.

    o    Corrected bugs in 'tvcm_exsearch_nomToOrd' and 'tvcm_getNumSplits' 
         which appeared in in special cases.

    o    Improved help manual for 'tvcglm' and 'tvcolmm'.

    o    Revised references.


Changes in Version 0.2-3

    o    Added contr.wsum function.

    o    Added 'seed' argument to 'otsplot_control'.

    o    Internal changes for exhaustive search of 'tvcm'.

    o    Improved documentation.


Changes in Version 0.2-2

    o    Added seed option to 'tvcm_control'.

    o    The new implementation clearly distinguishes between the two 